--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <title>Daily Goal Tracker</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <meta name="theme-color" content="#f5f6ff">
-  <!-- PDF生成ライブラリ（フロントのみでPDF出力） -->
+  <!-- フロントPDF（英語ラベル）用：必要なら残す -->
   <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
   <style>
     button, input, textarea { touch-action: manipulation; }
@@ -176,16 +176,25 @@
         <p id="monthLabel" class="text-neutral-500 text-xs mt-1"></p>
 
         <!-- 出力ボタン -->
-        <div class="mt-3 flex gap-2">
+        <div class="mt-3 grid grid-cols-2 gap-2">
           <button id="exportCsvBtn"
                   class="rounded-lg px-3 py-2 bg-amber-300 hover:bg-amber-400 active:bg-amber-500 transition text-sm">
             CSVを出力
           </button>
-          <button id="exportPdfBtn"
+          <button id="exportPdfCloudBtn"
                   class="rounded-lg px-3 py-2 bg-indigo-300 hover:bg-indigo-400 active:bg-indigo-500 transition text-sm">
-            PDFを出力（英語ラベル）
+            PDFを出力（クラウド）
           </button>
         </div>
+
+        <!-- 参考：ローカル英語PDF（必要なら残す）
+        <div class="mt-2">
+          <button id="exportPdfBtn"
+                  class="rounded-lg px-3 py-2 bg-indigo-200 hover:bg-indigo-300 active:bg-indigo-400 transition text-xs">
+            PDFを出力（英語/ローカル）
+          </button>
+        </div>
+        -->
       </section>
 
       <!-- 今月の履歴（日別）＋ リセット -->
@@ -210,13 +219,14 @@
       getFirestore, doc, getDoc, setDoc, serverTimestamp,
       collection, getDocs, increment, writeBatch
     } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+    import { getFunctions, httpsCallable } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-functions.js";
 
     // === Firebase設定 ===
     const firebaseConfig = {
       apiKey: "AIzaSyDwt4EL1tLDehbGvluSf3-SNRKfvbzjQaU",
       authDomain: "daily-goal-tracker-900c0.firebaseapp.com",
       projectId: "daily-goal-tracker-900c0",
-      storageBucket: "daily-goal-tracker-900c0.firebasestorage.app",
+      storageBucket: "daily-goal-tracker-900c0.appspot.com",
       messagingSenderId: "1022566470001",
       appId: "1:1022566470001:web:10c7a2db8d938beb53e6d0"
     };
@@ -225,6 +235,7 @@
     const auth = getAuth(app);
     const db = getFirestore(app);
     const provider = new GoogleAuthProvider();
+    const functions = getFunctions(app, "asia-northeast1"); // リージョン東京
 
     // ===== テーマ色 =====
     const THEME = {
@@ -549,23 +560,13 @@
     // ==== CSV出力ユーティリティ ====
     function toCSV(rows) {
       const header = [
-        "日付(YYYY-MM-DD)",
-        "日目標(円)",
-        "日合計(円)",
-        "達成率(%)",
-        "月ID",
+        "日付(YYYY-MM-DD)", "日目標(円)", "日合計(円)", "達成率(%)", "月ID",
       ];
       const lines = [header.join(",")];
       rows.sort((a,b) => a.day.localeCompare(b.day));
       for (const r of rows) {
         const pct = r.goal > 0 ? Math.floor((r.total / r.goal) * 100) : 0;
-        lines.push([
-          r.day,
-          r.goal ?? 0,
-          r.total ?? 0,
-          pct,
-          monthId(),
-        ].join(","));
+        lines.push([ r.day, r.goal ?? 0, r.total ?? 0, pct, monthId() ].join(","));
       }
       const monthHeader = ["今月目標(円)","今月合計(円)","達成率(%)","対象月(YYYY-MM)"].join(",");
       const monthLine = [
@@ -626,67 +627,40 @@
       }
     }
 
-    // ==== PDF出力（フロントのみ / jsPDF：英語ラベル） ====
-    async function exportMonthPDF() {
+    // ==== ローカル英語PDF（必要なら残す） ====
+    async function exportMonthPDFLocal() {
       try {
         if (currentUser) { try { await recomputeMonthFromDays(currentUser.uid); } catch {} }
         const rows = await getMonthDaysData();
-
         const { jsPDF } = window.jspdf;
         const doc = new jsPDF({ unit: "pt", format: "a4" });
-
-        // Title (ASCII only)
         const title = `Daily Goal Tracker - Monthly Report  ${monthId()}`;
-        doc.setFont("helvetica", "bold");
-        doc.setFontSize(16);
-        doc.text(title, 40, 50);
-
-        // Summary (ASCII only)
-        const goal = monthState.monthGoal ?? 0;
-        const total = monthState.monthTotal ?? 0;
+        doc.setFont("helvetica", "bold"); doc.setFontSize(16); doc.text(title, 40, 50);
+        const goal = monthState.monthGoal ?? 0, total = monthState.monthTotal ?? 0;
         const pct = goal > 0 ? Math.floor((total / goal) * 100) : 0;
-
-        doc.setFont("helvetica", "normal");
-        doc.setFontSize(12);
+        doc.setFont("helvetica", "normal"); doc.setFontSize(12);
         const summary = [
           `Monthly Goal (JPY): ${goal.toLocaleString()}`,
           `Monthly Total (JPY): ${total.toLocaleString()}`,
           `Progress: ${pct}%`,
           `Month: ${monthId()}`
         ];
-        let y = 80;
-        summary.forEach(line => { doc.text(line, 40, y); y += 18; });
-
-        doc.setDrawColor(200);
-        doc.line(40, y + 6, 555, y + 6);
-        y += 24;
-
-        // Table header (ASCII)
+        let y = 80; summary.forEach(line => { doc.text(line, 40, y); y += 18; });
+        doc.setDrawColor(200); doc.line(40, y + 6, 555, y + 6); y += 24;
         doc.setFont("helvetica", "bold");
-        doc.text("Date", 40, y);
-        doc.text("Daily Goal (JPY)", 150, y);
-        doc.text("Daily Total (JPY)", 300, y);
-        doc.text("Achv. (%)", 460, y);
-        y += 16;
-        doc.setFont("helvetica", "normal");
-
-        // Rows
+        doc.text("Date", 40, y); doc.text("Daily Goal (JPY)", 150, y);
+        doc.text("Daily Total (JPY)", 300, y); doc.text("Achv. (%)", 460, y);
+        y += 16; doc.setFont("helvetica", "normal");
         rows.sort((a,b) => a.day.localeCompare(b.day));
         for (const r of rows) {
           if (y > 770) { doc.addPage(); y = 60; }
           const rPct = r.goal > 0 ? Math.floor((r.total / r.goal) * 100) : 0;
-          doc.text(r.day, 40, y);
-          doc.text(String(r.goal ?? 0), 150, y);
-          doc.text(String(r.total ?? 0), 300, y);
-          doc.text(String(rPct), 460, y);
+          doc.text(r.day, 40, y); doc.text(String(r.goal ?? 0), 150, y);
+          doc.text(String(r.total ?? 0), 300, y); doc.text(String(rPct), 460, y);
           y += 16;
         }
-
         doc.save(`DailyGoalTracker_${monthId()}.pdf`);
-      } catch (e) {
-        console.error(e);
-        alert("PDFの作成に失敗しました。通信状況をご確認ください。");
-      }
+      } catch (e) { console.error(e); alert("PDFの作成に失敗しました。"); }
     }
 
     // ===== 初期描画 =====
@@ -748,51 +722,17 @@
       e.target.value = qty;
     });
 
-    // ===== タブ切替（ボタン） =====
-    document.getElementById('tabDay').addEventListener('click', async () => {
-      activeTab = 'day'; updateAllUI();
-    });
+    // ===== タブ切替 =====
+    document.getElementById('tabDay').addEventListener('click', () => { activeTab = 'day'; updateAllUI(); });
     document.getElementById('tabMonth').addEventListener('click', async () => {
       activeTab = 'month';
-      if (currentUser) { try { await recomputeMonthFromDays(currentUser.uid); } catch(e){ console.warn(e); } }
-      updateAllUI();
-      await refreshMonthHistory();
+      if (currentUser) { try { await recomputeMonthFromDays(currentUser.uid); } catch(e){} }
+      updateAllUI(); await refreshMonthHistory();
     });
-
-    // ===== タブ切替（スワイプ） =====
-    (() => {
-      const root = document.getElementById('appRoot');
-      let x0 = null, y0 = null;
-      const THRESH = 40;
-      root.addEventListener('touchstart', (e) => {
-        const t = e.touches[0];
-        x0 = t.clientX; y0 = t.clientY;
-      }, {passive:true});
-      root.addEventListener('touchend', async (e) => {
-        if (x0 == null) return;
-        const t = e.changedTouches[0];
-        const dx = t.clientX - x0;
-        const dy = Math.abs(t.clientY - y0);
-        x0 = y0 = null;
-        if (dy > 60) return;
-        if (Math.abs(dx) < THRESH) return;
-        if (dx < 0) {
-          activeTab = 'month';
-          if (currentUser) { try { await recomputeMonthFromDays(currentUser.uid); } catch(e){} }
-          updateAllUI(); await refreshMonthHistory();
-        } else {
-          activeTab = 'day'; updateAllUI();
-        }
-      }, {passive:true});
-    })();
 
     // ===== 認証 =====
-    document.getElementById('loginBtn').addEventListener('click', async () => {
-      await signInWithPopup(auth, provider);
-    });
-    document.getElementById('logoutBtn').addEventListener('click', async () => {
-      await signOut(auth);
-    });
+    document.getElementById('loginBtn').addEventListener('click', async () => { await signInWithPopup(auth, provider); });
+    document.getElementById('logoutBtn').addEventListener('click', async () => { await signOut(auth); });
 
     onAuthStateChanged(auth, async (user) => {
       currentUser = user || null;
@@ -821,14 +761,9 @@
       monthState.monthGoal = goal;
       document.getElementById('monthGoalInput').value = '';
       try {
-        if (currentUser) {
-          await saveMonthGoal(currentUser.uid, goal);
-        } else {
-          saveLocalMonth(monthState);
-        }
-      } finally {
-        updateAllUI();
-      }
+        if (currentUser) { await saveMonthGoal(currentUser.uid, goal); }
+        else { saveLocalMonth(monthState); }
+      } finally { updateAllUI(); }
     });
 
     document.getElementById('resetMonthBtn').addEventListener('click', async () => {
@@ -837,29 +772,38 @@
         await resetMonthData(currentUser?.uid);
         if (currentUser) await recomputeMonthFromDays(currentUser.uid);
       } catch (e) {
-        alert('リセット中にエラーが発生しました。通信状況を確認してください。');
-        console.warn(e);
+        alert('リセット中にエラーが発生しました。'); console.warn(e);
       } finally {
-        updateAllUI();
-        await refreshMonthHistory();
+        updateAllUI(); await refreshMonthHistory();
       }
     });
 
     // ==== 出力ボタン結びつけ ====
-    const exportCsvBtnEl = document.getElementById('exportCsvBtn');
-    if (exportCsvBtnEl) exportCsvBtnEl.addEventListener('click', exportMonthCSV);
+    document.getElementById('exportCsvBtn')?.addEventListener('click', exportMonthCSV);
+    // document.getElementById('exportPdfBtn')?.addEventListener('click', exportMonthPDFLocal); // 任意（英語PDF）
 
-    const exportPdfBtnEl = document.getElementById('exportPdfBtn');
-    if (exportPdfBtnEl) exportPdfBtnEl.addEventListener('click', exportMonthPDF);
+    // クラウドPDF（要ログイン）
+    document.getElementById('exportPdfCloudBtn')?.addEventListener('click', async () => {
+      if (!currentUser) { alert('PDF（クラウド）はログインが必要です。'); return; }
+      try {
+        const callable = httpsCallable(functions, 'generateMonthlyPdf');
+        // 当月を明示的に渡す
+        const res = await callable({ monthId: monthId() });
+        const { url } = res.data || {};
+        if (!url) throw new Error('URL not returned');
+        // 新規タブで開く
+        window.open(url, '_blank');
+      } catch (e) {
+        console.error(e);
+        alert('PDF生成に失敗しました。少し時間をおいて再度お試しください。');
+      }
+    });
 
     // ===== 他タブ更新フォロー（未ログイン時） =====
     window.addEventListener('visibilitychange', async () => {
       if (document.visibilityState === 'visible' && !currentUser) {
-        state = loadLocal();
-        profile = loadLocalProfile();
-        monthState = loadLocalMonth();
-        updateAllUI();
-        await refreshMonthHistory();
+        state = loadLocal(); profile = loadLocalProfile(); monthState = loadLocalMonth();
+        updateAllUI(); await refreshMonthHistory();
       }
     });
   </script>
